--- a/.github/workflows/code-review-gpt.yaml
+++ b/.github/workflows/code-review-gpt.yaml
@@ -13,5 +13,5 @@ jobs:
         uses: mattzcarey/code-review-gpt@v0.1.4-alpha
         with:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          MODEL: 'gpt-3.5-turbo'
+          MODEL: 'gpt-4-32k'
           GITHUB_TOKEN: ${{ github.token }}
